--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="back"></div>
     <nav>
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="About.html">About</a>
       <a href="menu.html">Menu</a>
       <a href="contacts.html">contacts</a>
