--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Document</title>
 </head>
 <body>
     <div class="back"></div>
     <nav>
       <a href="index.html">Home</a>
-      <a href="About.html">About</a>
-      <a href="menu.html">Menu</a>
-      <a href="contacts.html">contacts</a>
-      <a href="#">join us</a>
+      <a href="./HTML/About.html">About</a>
+      <a href="./HTML/menu.html">Menu</a>
+      <a href="./HTML/contacts.html">contacts</a>
+      <a href="./HTML/joinus.html">join us</a>
     </nav>
 <br><br><br><br><br><br><br>
    <div class="container">PIZZAREA</div>
