--- a/HTML/contacts.html
+++ b/HTML/contacts.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/contacts.css">
+    <link rel="stylesheet" href="../css/contacts.css">
     <title>contacts</title>
 </head>
 <body>
   
     <div class="back"></div>
     <nav>
-      <a href="home.html">Home</a>
-      <a href="About.html">About</a>
-      <a href="menu.html">Menu</a>
-      <a href="contacts.html">contacts</a>
-      <a href="contacts.html">join us</a>
+      <a href="../index.html">Home</a>
+      <a href="./About.html">About</a>
+      <a href="./menu.html">Menu</a>
+      <a href="./contacts.html">contacts</a>
+      <a href="./joinus.html">join us</a>
     </nav>
     <br><br><br><br><br>
     <div class="page-header">
