--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <a href="./HTML/menu.html">Menu</a>
       <a href="./HTML/contacts.html">contacts</a>
       <a href="./HTML/joinus.html">join us</a>
+      <a href="./HTML/checkout.html">checkout</a>
     </nav>
 <br><br><br><br><br><br><br>
    <div class="container">PIZZAREA</div>
@@ -30,10 +31,10 @@
                     <div class="feature-img">
                         <div class="row">
                             <div class="col-6">
-                                <img src="IMAGES/pizza2.jpg" alt="Image">
+                                <img src="IMAGES/pizza.jpg" alt="Image">
                             </div>
                             <div class="col-6">
-                                <img src="IMAGES/pizza3.jpg" alt="Image">
+                                <img src="IMAGES/pizza2.jpg" alt="Image">
                             </div>
                        
                         </div>
