quality control employee view

--- a/HTML/quality_control_view.html
+++ b/HTML/quality_control_view.html
@@ -40,7 +40,6 @@
       <div class="promo_card">
         <h1>Welcome Youssef William</h1>
         <span>This is the Quality constrol</span>
-        <!-- <button>Learn More</button> -->
       </div>
 
       <div class="history_lists">
@@ -69,7 +68,7 @@
                 <td>2</td>
                 <td>Youssef</td>
                 <td>William</td>
-                <td>Mostafa@miu</td>
+                <td>joe@miu</td>
               </tr>
               <tr>
                 <td>3</td>
