quality control cashier users and add cashier

--- a/HTML/quality_control_cashier.html
+++ b/HTML/quality_control_cashier.html
@@ -35,14 +35,15 @@
     </nav>
 
     <div class="main-body">
-      <h2>Quality control employees</h2>
+      <h2>cashier employees</h2>
       <div class="promo_card">
-        <h1>Here you can demote and Delete employees</h1>
+        <h1>Here you can promote , enable, disable and Delete cashier employees</h1>
       </div>
       <div class="history_lists">
         <div class="list1">
           <div class="row">
-            <h4>Quality control employees</h4>
+            <h4>cashier employees</h4>
+            <a href="./add_casheir.html">Add cashier</a>
           </div>
           <table>
             <thead>
@@ -51,7 +52,9 @@
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Email</th>
-                <th>demote</th>
+                <th>promote</th>
+                <th>enable</th>
+                <th>disable</th>
                 <th>Delete</th>
               </tr>
             </thead>
@@ -61,7 +64,9 @@
                 <td>Marwan</td>
                 <td>Enani</td>
                 <td>marwan@miu</td>
-                <td><a href="#">demote emp</button></td>
+                <td><a href="#">promote emp</a></td>
+                <td><a href="#">enable emp</a></td>
+                <td><a href="#">disable emp</a></td>
                 <td><a href="#">Delete emp</a></td>
               </tr>
               <tr>
@@ -69,7 +74,9 @@
                 <td>Youssef</td>
                 <td>William</td>
                 <td>joe@miu</td>
-                <td><a href="#">demote emp</a></td>
+                <td><a href="#">promote emp</a></td>
+                <td><a href="#">enable emp</a></td>
+                <td><a href="#">disable emp</a></td>
                 <td><a href="#">Delete emp</a></td>
               </tr>
               <tr>
@@ -77,7 +84,9 @@
                 <td>Marwan</td>
                 <td>Aboelhaid</td>
                 <td>marwan@miu</td>
-                <td><a href="#">demote emp</a></td>
+                <td><a href="#">promote emp</a></td>
+                <td><a href="#">enable emp</a></td>
+                <td><a href="#">disable emp</a></td>
                 <td><a href="#">Delete emp</a></td>
               </tr>
               <tr>
@@ -85,7 +94,9 @@
                 <td>Mostafa</td>
                 <td>Mohamed</td>
                 <td>mostafa@miu</td>
-                <td><a href="#">demote emp</a></td>
+                <td><a href="#">promote emp</a></td>
+                <td><a href="#">enable emp</a></td>
+                <td><a href="#">disable emp</a></td>
                 <td><a href="#">Delete emp</a></td>
               </tr>
               <tr>
@@ -93,7 +104,9 @@
                 <td>Youssef</td>
                 <td>Saleh</td>
                 <td>youssef1@miu</td>
-                <td><a href="#">demote emp</a></td>
+                <td><a href="#">promote emp</a></td>
+                <td><a href="#">enable emp</a></td>
+                <td><a href="#">disable emp</a></td>
                 <td><a href="#">Delete emp</a></td>
               </tr>
               <tr>
@@ -101,7 +114,9 @@
                 <td>Abdallah</td>
                 <td>Elsbaae</td>
                 <td>abdallah@miu</td>
-                <td><a href="#">demote emp</a></td>
+                <td><a href="#">promote emp</a></td>
+                <td><a href="#">enable emp</a></td>
+                <td><a href="#">disable emp</a></td>
                 <td><a href="#">Delete emp</a></td>
               </tr>
             </tbody>
