--- a/HTML/quality_control_view.html
+++ b/HTML/quality_control_view.html
@@ -10,7 +10,7 @@
 <body>
   <header class="header">
     <div class="logo">
-      <a href="#">PIZZAREA</a>
+      <a href="./quality_control_view.html">PIZZAREA</a>
       <div class="search_box">
         <input type="text" placeholder="Search">
         <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
