--- a/HTML/checkout.html
+++ b/HTML/checkout.html
@@ -7,6 +7,37 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+
+  <div class="order-form-container">
+    <h1>Restaurant Order Form</h1>
+    <form id="order-form">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="phone">Phone:</label>
+      <input type="tel" id="phone" name="phone" required>
+
+      <label for="dish">Dish:</label>
+      <select id="dish" name="dish" required>
+        <option value="">Select a dish</option>
+        <option value="pasta">Pasta</option>
+        <option value="pizza">Pizza</option>
+        <option value="burger">Burger</option>
+        <option value="salad">Salad</option>
+      </select>
+
+      <label for="quantity">Quantity:</label>
+      <input type="number" id="quantity" name="quantity" min="1" required>
+
+      <label for="notes">Special Notes:</label>
+      <textarea id="notes" name="notes" rows="4"></textarea>
+
+      <input type="submit" value="Place Order">
+    </form>
+  </div> 
 </body>
 </html>
