--- a/HTML/checkout.html
+++ b/HTML/checkout.html
@@ -8,6 +8,16 @@
 </head>
 <body>
 
+  <div class="back"></div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="./HTML/About.html">About</a>
+    <a href="./HTML/menu.html">Menu</a>
+    <a href="./HTML/contacts.html">contacts</a>
+    <a href="./HTML/joinus.html">join us</a>
+    <a href="./HTML/checkout.html">checkout</a>
+  </nav>
+  <br> <br>
 
   <div class="order-form-container">
     <h1>Restaurant Order Form</h1>
@@ -24,10 +34,13 @@
       <label for="dish">Dish:</label>
       <select id="dish" name="dish" required>
         <option value="">Select a dish</option>
-        <option value="pasta">Pasta</option>
-        <option value="pizza">Pizza</option>
-        <option value="burger">Burger</option>
-        <option value="salad">Salad</option>
+        <option value="pasta">chicken ranch pizza</option>
+        <option value="pizza">chicken bbq pizza</option>
+        <option value="burger">pepproni pizza</option>
+        <option value="salad"> bread</option>
+        <option value="salad"> caramel coffee</option>
+        <option value="salad"> standard coffee</option>
+        <option value="salad"> mochito</option>
       </select>
 
       <label for="quantity">Quantity:</label>
@@ -39,5 +52,38 @@
       <input type="submit" value="Place Order">
     </form>
   </div> 
+
+
+  <div class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-7">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="footer-contact">
+                            <h2>Our Address</h2>
+                            <p><i class="fa fa-map-marker-alt"></i>Degla, Maadi, EGY</p>
+                            <p><i class="fa fa-phone-alt"></i>+201003005152</p>
+                            <p><i class="fa fa-envelope"></i>PIZZAREA.com</p>
+                            <div class="footer-social">
+                                <a href=""><i class="fab fa-twitter"></i></a>
+                                <a href=""><i class="fab fa-facebook-f"></i></a>
+                                <a href=""><i class="fab fa-youtube"></i></a>
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href=""><i class="fab fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
+                    </div>
+      
+    
+    <div class="copyright">
+        <div class="container">
+            <p>Copyright &copy; <a href="pizzarea.com">PIZZAREA</a>, All Right Reserved.</p>
+            <p>Designed By <a href="https://www.instagram.com/marwan_enani">ME</a></p>
+        </div>
+    </div>
+  </div>
 </body>
+
+
 </html>
