--- a/HTML/About.html
+++ b/HTML/About.html
@@ -12,12 +12,12 @@
   
     <div class="back"></div>
     <nav>
-      <a href="../index.html">Home</a>
+      <a href="./index.html">Home</a>
       <a href="./About.html">About</a>
       <a href="./menu.html">Menu</a>
       <a href="./contacts.html">contacts</a>
       <a href="./joinus.html">join us</a>
-      <a href="./HTML/checkout.html">checkout</a>
+      <a href="./checkout.html">checkout</a>
     </nav>
 <br><br><br><br><br><br>
     <div class="food mt-0">
