--- a/HTML/checkout.html
+++ b/HTML/checkout.html
@@ -11,11 +11,11 @@
   <div class="back"></div>
   <nav>
     <a href="index.html">Home</a>
-    <a href="./HTML/About.html">About</a>
-    <a href="./HTML/menu.html">Menu</a>
-    <a href="./HTML/contacts.html">contacts</a>
-    <a href="./HTML/joinus.html">join us</a>
-    <a href="./HTML/checkout.html">checkout</a>
+    <a href="./About.html">About</a>
+    <a href="./menu.html">Menu</a>
+    <a href="./contacts.html">contacts</a>
+    <a href="./joinus.html">join us</a>
+    <a href="./checkout.html">checkout</a>
   </nav>
   <br> <br>
 
