--- a/HTML/contacts.html
+++ b/HTML/contacts.html
@@ -10,7 +10,7 @@
   
     <div class="back"></div>
     <nav>
-      <a href="../index.html">Home</a>
+      <a href="./index.html">Home</a>
       <a href="./About.html">About</a>
       <a href="./menu.html">Menu</a>
       <a href="./contacts.html">contacts</a>
