--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <title>Document</title>
 </head>
 <body>
     <div class="back"></div>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="./HTML/About.html">About</a>
-      <a href="./HTML/menu.html">Menu</a>
-      <a href="./HTML/contacts.html">contacts</a>
-      <a href="./HTML/joinus.html">join us</a>
-      <a href="./HTML/checkout.html">checkout</a>
+      <a href="./index.html">Home</a>
+      <a href="./About.html">About</a>
+      <a href="./menu.html">Menu</a>
+      <a href="./contacts.html">contacts</a>
+      <a href="./joinus.html">join us</a>
+      <a href="./checkout.html">checkout</a>
     </nav>
 <br><br><br><br><br><br><br>
    <div class="container">PIZZAREA</div>
@@ -31,10 +31,10 @@
                     <div class="feature-img">
                         <div class="row">
                             <div class="col-6">
-                                <img src="IMAGES/pizza.jpg" alt="Image">
+                                <img src="../IMAGES/pizza.jpg" alt="Image">
                             </div>
                             <div class="col-6">
-                                <img src="IMAGES/pizza2.jpg" alt="Image">
+                                <img src="../IMAGES/pizza2.jpg" alt="Image">
                             </div>
                        
                         </div>
