--- a/HTML/menu.html
+++ b/HTML/menu.html
@@ -10,11 +10,12 @@
   
     <div class="back"></div>
     <nav>
-      <a href="../index.html">Home</a>
+      <a href="./index.html">Home</a>
       <a href="./About.html">About</a>
       <a href="./menu.html">Menu</a>
       <a href="./contacts.html">contacts</a>
       <a href="./joinus.html">join us</a>
+      <a href="./checkout.html">checkout</a>
     </nav>
 <br><br><br><br><br><br>
 
