--- a/HTML/contacts.html
+++ b/HTML/contacts.html
@@ -15,6 +15,7 @@
       <a href="./menu.html">Menu</a>
       <a href="./contacts.html">contacts</a>
       <a href="./joinus.html">join us</a>
+      <a href="./checkout.html">checkout</a>
     </nav>
     <br><br><br><br><br>
     <div class="page-header">
