--- a/HTML/About.html
+++ b/HTML/About.html
@@ -17,7 +17,7 @@
       <a href="./menu.html">Menu</a>
       <a href="./contacts.html">contacts</a>
       <a href="./joinus.html">join us</a>
-      <a href="./checkout.html">checkout</a>
+      <a href="./newCheckout.html">checkout</a>
     </nav>
 <br><br><br><br><br><br>
     <div class="food mt-0">
