checkout nearly complete

--- a/HTML/newCheckout.html
+++ b/HTML/newCheckout.html
@@ -13,7 +13,7 @@
         <header>
             <h1>Your Shopping Cart</h1>
             <div class="shopping">
-                <img src="../IMAGES/cart.png">
+                <img src="../IMAGES/cart3.png">
                 <span class="quantity">0</span>
             </div>
         </header>
@@ -31,5 +31,6 @@
             <div class="closeShopping">Close</div>
         </div>
     </div>
+    <script src="../app.js"></script>
 </body>
 </html>
