--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,7 +14,7 @@
       <a href="./menu.html">Menu</a>
       <a href="./contacts.html">contacts</a>
       <a href="./joinus.html">join us</a>
-      <a href="./newCheckout.html">checkout</a>
+      <a href="./newCheckout.html">Shop</a>
     </nav>
 <br><br><br><br><br><br><br>
    <div class="container">PIZZAREA</div>
