--- a/HTML/menu.html
+++ b/HTML/menu.html
@@ -15,7 +15,7 @@
       <a href="./menu.html">Menu</a>
       <a href="./contacts.html">contacts</a>
       <a href="./joinus.html">join us</a>
-      <a href="./newCheckout.html">checkout</a>
+      <a href="./newCheckout.html">Shop</a>
     </nav>
 <br><br><br><br><br><br>
 
